Fixing html link and script import path

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
 
     <!-- Application Style -->
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <title>Photo Gallery</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
         <i class="fa-solid fa-copyright footer-icon"></i>
     </footer>
 
-    <script src="/static/js/generateCards.js"></script>
-    <script src="/static/js/headerMenuControl.js"></script>
+    <script src="static/js/generateCards.js"></script>
+    <script src="static/js/headerMenuControl.js"></script>
 </body>
 </html>
